# NETender

./: README.md
Web/tender-app-web/: .prettierrc  .stylelintrc.js  .umirc.ts  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
Web/tender-app-web/.husky/: prepare-commit-msg
Web/tender-app-web/src/: app.tsx  global.d.ts
Web/tender-app-web/src/common/: constant.ts
Web/tender-app-web/src/components/attendee-list/: index.less  index.tsx
Web/tender-app-web/src/components/bookMeetingModal/: index.less  index.tsx
Web/tender-app-web/src/components/controller/: index.less  index.tsx
Web/tender-app-web/src/components/custom-icon/: index.tsx
Web/tender-app-web/src/components/description/: index.less  index.tsx
Web/tender-app-web/src/components/leave-button/: index.tsx
Web/tender-app-web/src/components/nav/: index.less  index.tsx
Web/tender-app-web/src/config/: index.tsx
Web/tender-app-web/src/layouts/: index.tsx
Web/tender-app-web/src/pages/home/: index.less  index.tsx
Web/tender-app-web/src/pages/login/: index.less  index.tsx
Web/tender-app-web/src/pages/tender/: index.less  index.tsx
Web/tender-app-web/src/store/: useGlobalStore.ts
Web/tender-app-web/src/types/: index.d.ts
Web/tender-app-web/src/utils/: index.ts
Web/tender-app-web/src/wrappers/: auth.tsx
Web/tender-app-web/ssl/: server.crt  server.key
Windows/NETenderDemo/: CMakeLists.txt  README.md  app_dump.h  build_for_windows.sh  main.cpp
Windows/NETenderDemo/NETender_Windows_SDK/netender-sdk/include/netender/c_api/: c_api_account_manager.h  c_api_audio_manager.h  c_api_chatroom_manager.h  c_api_core.h  c_api_invite_manager.h  c_api_meeting_kit.h  c_api_meeting_manager.h  c_api_member_manager.h  c_api_pre_meeting_manager.h  c_api_screen_share_manager.h  c_api_security_manager.h  c_api_types.h  c_api_video_manager.h  c_api_waiting_room_manager.h
Windows/NETenderDemo/NETender_Windows_SDK/netender-sdk/lib/Release/: netender.exp  netender.lib  node.lib
Windows/NETenderDemo/NETender_Windows_SDK/netender-sdk/runtime/: index.js
Windows/NETenderDemo/NETender_Windows_SDK/netender-sdk/runtime/neroom-kit-node/assets/beauty/: 001.json  template.json
Windows/NETenderDemo/NETender_Windows_SDK/netender-sdk/runtime/neroom-kit-node/assets/beauty/beauty/: beauty.json
Windows/NETenderDemo/NETender_Windows_SDK/netender-sdk/runtime/neroom-kit-node/assets/beauty/distort/: distort.json
Windows/NETenderDemo/tools/: neutil.h
Windows/NETenderDemo/ui/: mainwindow.cpp  mainwindow.h  videowidget.cpp  videowidget.h
